Feat : 테마 리스트 코드 추가

--- a/python-server/test/mecab_test_code.ipynb
+++ b/python-server/test/mecab_test_code.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### //FIXME : 추후 사용자 사전을 작성하여 성능을 향상 시킬 필요성이 있음\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -47,12 +54,14 @@
        "'폐식용유 생활 폐기물 등 친환경 항공 유 연료 사용 항공기 국내 처음 시범 운항 돌입 국토 교통부 산업 통상 자원 부 인천 노선 운항 대한항공 화물기 바이오 항공 급유 달 간 시범 운항 지속 가능 항공 유 의미 기존 화석 연료 기반 항공 유 탄소 배출 최대 수 기존 항공 유와 혼합 사용 수 시범 운항 오후 시 분 인천 국제 공항 이륙 대한항공 편 투입 항공 유 급유 달 차례 달 간 차례 시범 운항 시범 운항 사용 대한항공 바이오 항공 유 실증 추진 협약 칼 텍스 공급 칼 텍스 세계 최대 바이오 연료 생산 기업 핀란드 네스 테 사 생산 바이오 항공 유 국내 최초 공급 항공 화물기 급유 제품 미국 재료 시험 협회 등 국제 품질 기준 충족 바 당신 제보 뉴스 카카오톡 검색 채널 추가 전화 메일'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# from mecab import MeCab\n",
+    "# mecab = MeCab()\n",
     "result_text = ' '.join(mecab.nouns(text))\n",
     "\n",
     "result_text"
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
