--- a/python-server/test/okt_test_code.ipynb
+++ b/python-server/test/okt_test_code.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### //XXX : mecab에 비하여 느려, 사용하지 않을 예정 : 비교용도"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
