Feat : python api 서버 폴더 구조 개선, 테스트 폴더 구조 개선, keyword-themes 연결에 word2vec 적용

--- a/python-server/test/keyword_extract_test/mecab_test_code.ipynb
+++ b/python-server/test/keyword_extract_test/mecab_test_code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,41 +37,43 @@
     "text = \"\"\"\n",
     "폐식용유나 생활 폐기물 등으로 만든 친환경 항공유를 연료로 사용하는 항공기가 국내에서 처음으로 시범 운항에 돌입합니다. 국토교통부와 산업통상자원부는 인천∼LA 노선을 운항하는 대한항공 화물기에 바이오항공유, SAF를 급유해 석 달간 시범 운항을 한다고 밝혔습니다. SAF는 '지속가능 항공유'라는 의미로, 기존 화석연료 기반 항공유보다 탄소 배출을 최대 80%까지 줄일 수 있고 기존 항공유와도 혼합해 사용할 수 있습니다. 오늘 첫 시범 운항에는 오후 5시 45분 인천국제공항에서 이륙하는 대한항공 KE207편이 투입됩니다. 우선 SAF를 2% 섞은 항공유를 급유해 한 달에 2차례씩 석 달간 모두 6차례 시범 운항을 합니다. 시범 운항에 사용하는 SAF는 대한항공과 바이오항공유 실증 추진 협약을 맺은 GS칼텍스가 공급합니다. GS칼텍스는 세계 최대 바이오연료 생산 기업인 핀란드 '네스테'사가 생산한 바이오항공유를 국내 최초로 공급받아 대한항공 화물기에 급유합니다. 이 제품은 미국재료시험협회 등 국제 품질 기준을 충족한 바 있습니다. ※ '당신의 제보가 뉴스가 됩니다' [카카오톡] YTN 검색해 채널 추가 [전화] 02-398-8585 [메일] social@ytn.co.kr\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "texts = text.split('.\\n')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'폐식용유 생활 폐기물 등 친환경 항공 유 연료 사용 항공기 국내 처음 시범 운항 돌입 국토 교통부 산업 통상 자원 부 인천 노선 운항 대한항공 화물기 바이오 항공 급유 달 간 시범 운항 지속 가능 항공 유 의미 기존 화석 연료 기반 항공 유 탄소 배출 최대 수 기존 항공 유와 혼합 사용 수 시범 운항 오후 시 분 인천 국제 공항 이륙 대한항공 편 투입 항공 유 급유 달 차례 달 간 차례 시범 운항 시범 운항 사용 대한항공 바이오 항공 유 실증 추진 협약 칼 텍스 공급 칼 텍스 세계 최대 바이오 연료 생산 기업 핀란드 네스 테 사 생산 바이오 항공 유 국내 최초 공급 항공 화물기 급유 제품 미국 재료 시험 협회 등 국제 품질 기준 충족 바 당신 제보 뉴스 카카오톡 검색 채널 추가 전화 메일'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'texts' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\woong\\S09P22A206\\python-server\\test\\mecab_test_code.ipynb 셀 6\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/woong/S09P22A206/python-server/test/mecab_test_code.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# from mecab import MeCab\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/woong/S09P22A206/python-server/test/mecab_test_code.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# mecab = MeCab()\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/woong/S09P22A206/python-server/test/mecab_test_code.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m text \u001b[39min\u001b[39;00m texts :\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/woong/S09P22A206/python-server/test/mecab_test_code.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mprint\u001b[39m(mecab\u001b[39m.\u001b[39mnouns(text))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/woong/S09P22A206/python-server/test/mecab_test_code.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# result_text = ' '.join(mecab.nouns(text))\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/woong/S09P22A206/python-server/test/mecab_test_code.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/woong/S09P22A206/python-server/test/mecab_test_code.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# result_text\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'texts' is not defined"
+     ]
     }
    ],
    "source": [
     "# from mecab import MeCab\n",
-    "# mecab = MeCab()\n",
-    "result_text = ' '.join(mecab.nouns(text))\n",
+    "mecab = MeCab()\n",
+    "for text in texts :\n",
+    "    print(mecab.nouns(text))\n",
+    "# result_text = ' '.join(mecab.nouns(text))\n",
     "\n",
-    "result_text"
+    "# result_text"
    ]
   },
   {
