--- a/exec/포팅_매뉴얼_상세.md
+++ b/exec/포팅_매뉴얼_상세.md
@@ -485,9 +485,10 @@ networks:
 ## 사용 포트 목록
 
 - `80`, `443` : http
-- `8080` : Frontend
+- `3001` : Frontend
 - `3306` : MySQL
-- `5000` : Backend, Python-server
+- `8080`, `8081` : Backend
+- `5000` : Python-server
 - `8089` : jenkins
 - `8900` : prometheus
 - `8100` : node-exporter
