--- a/exec/포팅_매뉴얼_상세.md
+++ b/exec/포팅_매뉴얼_상세.md
@@ -43,16 +43,13 @@
 - `SpringBoot 3.1.3`
 - `Gradle 8.2.1`
   <details>
-    <summary>Dependencies ##여기 고쳐야함</summary>
+    <summary>Dependencies</summary>
     <div markdown="1">
 
     - Spring Data JPA  
-    - Spring Security
-    - Spring Amqp
     - Lombok
-    - Querydsl
     - Swagger
-    
+    - actuator 
     </div>
   </details>
 
@@ -72,7 +69,7 @@
 
 ## 프로젝트 구조
 
-![system_architecture_ffu](##프로젝트구조이미지)
+![system_architecture_ffu](./이미지/Hotstock%20시스템%20아키텍처.png)
 
 ## SSH 연결 방법
 
