--- a/exec/포팅_매뉴얼_상세.md
+++ b/exec/포팅_매뉴얼_상세.md
@@ -52,6 +52,25 @@
     - actuator 
     </div>
   </details>
+  <br/>
+- `python 3.11.5`
+  <details>
+    <summary>requirements</summary>
+    <div markdown="1">
+  
+    - Flask==2.3.3
+    - Flask-Cors==4.0.0  
+    - flask-restx==1.1.0  
+    - python-mecab-ko==1.3.3
+    - krwordrank==1.0.3
+    - gensim==4.3.2
+    - openai==0.28.0
+    - gdown==4.7.1
+    - gunicorn==21.2.0
+    - selenium==4.13.0
+    - webdriver-manager==4.0.1
+    </div>
+  </details>
 
 
 ### Database
@@ -478,6 +497,59 @@ networks:
 </details>
 
 ### Backend(Python)
+```bash
+# Python 서버 빌드만 별도로 수행하기 위해서는 아래와 같이 입력한다
+cd python-server
+docker-compose build 
+docker-compose down
+docker-compose up
+```
+<details>
+<summary>Dockerfile 스크립트</summary>
+<div markdown="1">
+
+```bash
+# 기본 파이썬 이미지 사용
+FROM python:3.11.5-slim
+
+#작업 디렉토리 설정
+WORKDIR /app
+
+# 필요한 패키지 설치
+COPY requirements.txt requirements.txt
+RUN pip install -r requirements.txt
+
+# 애플리케이션 코드 복사
+COPY . .
+
+# 포트 5000 열기
+EXPOSE 5000
+
+# 애플리케이션 실행
+# 1프로세스 2스레드
+CMD ["gunicorn", "--timeout", "600", "-w", "1", "--threads", "2", "-b", "0.0.0.0:5000", "run:app"]
+
+```
+</div>
+</details>
+<details>
+<summary>docker-compose.yml 스크립트</summary>
+<div markdown="1">
+
+```bash
+version: '3'
+
+services:
+  api-server:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+```
+</div>
+</details>
+
 
 ## 사용 포트 목록
 
@@ -496,3 +568,41 @@ networks:
 ## MySQL ERD
 
 ![erd](./이미지/HotStock.png)
+
+
+## DB 덤프 파일
+
+- [DB_snapshot](./db_snapshot_20231006.sql)
+
+
+
+## 시연 페이지
+
+---
+### 1. 메인 페이지
+![메인 페이지](./이미지/시연페이지/1_메인.jpg)
+
+---
+### 2. 키워드 세부 페이지
+![메인 페이지](./이미지/시연페이지/2_키워드세부.jpg)
+
+---
+### 3. 종목 세부 페이지
+![메인 페이지](./이미지/시연페이지/3_종목세부.jpg)
+
+---
+### 4. 랭킹 페이지
+![메인 페이지](./이미지/시연페이지/4_랭킹.jpg)
+
+---
+### 5. 테마 페이지
+![메인 페이지](./이미지/시연페이지/5_테마.jpg)
+
+---
+### 6. 테마 세부 페이지
+![메인 페이지](./이미지/시연페이지/6_테마세부.jpg)
+
+---
+### 7. 서비스 소개 페이지
+![메인 페이지](./이미지/시연페이지/7_서비스소개.jpg)
+
